--- a/front-end/TEST1/assets/css/util.css
+++ b/front-end/TEST1/assets/css/util.css
@@ -2432,6 +2432,8 @@
 */
 .bo-cir {border-radius: 50%;}
 
+.rounded_pill{border-radius: 5rem;}
+
 .of-hidden {overflow: hidden;}
 
 .visible-false {visibility: hidden;}
@@ -3052,5 +3054,9 @@
 .flex-10{flex: 10;}
 
 
+/* shadow ======================== */
+.filter_shadow{
+	filter: drop-shadow(2px 4px 6px black);
+}
 
 
