--- a/front-end/TEST1/assets/css/style.css
+++ b/front-end/TEST1/assets/css/style.css
@@ -1,3 +1,17 @@
+/* @font-face {
+    font-family: "BYekan";
+    src: url("/front-end/TEST1/assets/fonts/BYekan/BYekan-webfont.eot") format("eot"),
+        url("/front-end/TEST1/assets/fonts/BYekan/BYekan-webfont.woff") format("woff"),
+        url("/front-end/TEST1/assets/fonts/BYekan/BYekan-webfont.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+} */
+
+* {
+    direction: rtl;
+    /* font-family: "BYekan"; */
+}
+
 @media(min-width:600px) {
     .top_navbar {
         box-shadow: 0 0 50px gray !important;
@@ -50,4 +64,8 @@ table.highlight>tbody>tr:hover {
 .add_user_modal.show {
     box-shadow: 0 0 10px blue;
     bottom: 0;
+}
+
+.sidenav_link_icon {
+    margin: 0 0 0 25px !important;
 }
