--- a/front-end/TEST1/assets/css/style.css
+++ b/front-end/TEST1/assets/css/style.css
@@ -1,17 +1,3 @@
-/* @font-face {
-    font-family: "BYekan";
-    src: url("/front-end/TEST1/assets/fonts/BYekan/BYekan-webfont.eot") format("eot"),
-        url("/front-end/TEST1/assets/fonts/BYekan/BYekan-webfont.woff") format("woff"),
-        url("/front-end/TEST1/assets/fonts/BYekan/BYekan-webfont.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
-} */
-
-/* * {
-    direction: rtl;
-    font-family: "BYekan";
-} */
-
 @media(min-width:600px) {
     .top_navbar {
         box-shadow: 0 0 50px gray !important;
@@ -64,4 +50,9 @@ table.highlight>tbody>tr:hover {
 .add_user_modal.show {
     box-shadow: 0 0 10px blue;
     bottom: 0;
+}
+
+.user_list_section {
+    height: calc(100vh - 285px);
+    overflow: auto;
 }
